Fixed gap in delete page

--- a/src/styles/Reservations.css
+++ b/src/styles/Reservations.css
@@ -49,7 +49,7 @@
 .delete-grid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  gap: 30px;
+  gap: 100px;
   align-items: center;
 }
 
